update multiple account info page

--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -143,10 +143,8 @@
 
     const logout = (e) => {
       e.preventDefault();
-      Clm.api('logout').then(response => {
-        localStorage.clear();
-        location.reload();
-      });
+      chrome.storage.local.clear();
+      location.reload();
     }
 
     const confirmDelete = (e) => {
