--- a/src/pages/account/change-info.f7.html
+++ b/src/pages/account/change-info.f7.html
@@ -42,24 +42,24 @@
                                         <div class="form-row">
                                             <div class="form-group col-md-6">
                                                 <label for="inputEmail6">Họ và tên</label>
-                                                <input type="text" value="" class="form-control"
+                                                <input type="text" value="${account.name}" class="form-control"
                                                        id="inputEmail6" placeholder="Name" disabled/>
                                             </div>
                                             <div class="form-group col-md-6">
                                                 <label for="inputEmail4">Email</label>
                                                 <input type="email" class="form-control" id="inputEmail4"
-                                                       placeholder="Email" value="" disabled/>
+                                                       placeholder="Email" value="${account.email}" disabled/>
                                             </div>
 
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group col-md-6">
-                                                <label for="asd">Ngày tham gia</label>
+                                                <label for="asd">Vai trò</label>
                                                 <input type="text" class="form-control" id="asd" placeholder="username"
-                                                       value="" disabled/>
+                                                       value="${account.role}" disabled/>
                                             </div>
                                             <div class="form-group col-md-6">
-                                                <label for="inputPassword4">Mật khẩu</label>
+                                                <label for="inputPassword">Mật khẩu</label>
                                                 <div class="row">
                                                     <div class="col-12">
                                                         <a href='/account/change-password/'
@@ -67,11 +67,6 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="input-bio">Address</label>
-                                            <textarea type="text" class="form-control" id="input-bio"
-                                                      placeholder="Bio..."></textarea>
                                         </div>
                                         <button type="submit" class="btn btn-success btn-cta">Lưu lại</button>
                                     </form>
@@ -88,8 +83,10 @@
     </div>
 </template>
 <script>
-	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
+  import Clm from "../../js/clm";
 
+	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
+    let account = Clm.account;
 		// Return render function
 		return $render;
 	}
