--- a/src/pages/account/account.f7.html
+++ b/src/pages/account/account.f7.html
@@ -47,7 +47,7 @@
 
                 <div class="list-group-item p-all-15 h6 ">
                   <i class="mdi mdi-briefcase"></i>
-                  Tham gia vào ngày 20/10/2021
+                  Tham gia vào ngày ${Clm.timeConverter(account.creation_time)}
                 </div>
                 <div class="list-group-item p-all-15 h6 ">
                   <i class="mdi mdi-facebook"></i>
