--- a/src/pages/account/account.f7.html
+++ b/src/pages/account/account.f7.html
@@ -8,7 +8,7 @@
             <div class="col-md-6 text-white p-b-30">
               <div class="media">
                 <div class="avatar avatar-xl mr-3">
-                  <img src="assets/img/users/user-5.jpg" class="rounded-circle" alt=""/>
+                  <img src="${avatarUrl}" class="rounded-circle" alt=""/>
                 </div>
                 <div class="media-body">
                   <h1>${account.name}</h1>
@@ -65,7 +65,7 @@
                     <i class="mdi mdi-account mdi-18px"></i>
                   </div>
                 </div>
-               Dự án đã tham gia
+                Dự án đã tham gia
               </div>
 
               <div class="list-group list list-group-flush">
@@ -104,15 +104,15 @@
 
 
           <div class="col-lg-8 order-1 order-lg-0 m-b-30">
-              <div class="card m-b-30">
-                <div class="card-header">
-                  <div class="card-title">Bài viết mới</div>
-                </div>
-                <div class="card-body">
-                  <div id="summernote"></div>
-                </div>
+            <div class="card m-b-30">
+              <div class="card-header">
+                <div class="card-title">Bài viết mới</div>
               </div>
-<!--              bài đăng của người dùng -->
+              <div class="card-body">
+                <div id="summernote"></div>
+              </div>
+            </div>
+            <!--              bài đăng của người dùng -->
           </div>
 
         </div>
@@ -124,8 +124,9 @@
 </template>
 <script>
   import Clm from "../../js/clm";
+  const md5 = require("md5");
 
-  export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted }) {
+  export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
     $on("pageBeforeIn", (e, page) => {
       window.$("#summernote").summernote({
         height: 100
@@ -133,6 +134,7 @@
     });
 
     let account = Clm.account;
+    let avatarUrl = "http://www.gravatar.com/avatar/" + md5(account['email']) + "?s=64";
 
     // Return render function
     return $render;
