working on logo

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="icon" type="image/x-icon" href="assets/img/logo.png"/>
-  <link rel="icon" href="assets/img/logo.png" type="image/png" sizes="16x16">
+  <link rel="icon" type="image/x-icon" href="static/logo-circle.png"/>
+  <link rel="icon" href="static/logo-circle.png" type="image/png" sizes="16x16">
   <script src="assets/vendor/pace/pace.min.js"></script>
   <!--vendors-->
   <link href="https://fonts.googleapis.com/css?family=Hind+Vadodara:400,500,600" rel="stylesheet">
