--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -3,9 +3,9 @@
     <aside class="admin-sidebar">
       <div class="admin-sidebar-brand">
         <!-- begin sidebar branding-->
-        <img class="admin-brand-logo" src="assets/img/logo.png" width="40" alt="atmos Logo"/>
+        <img class="admin-brand-logo" src="static/logo-circle.png" width="40" alt="atmos Logo"/>
         <span class="admin-brand-content font-secondary">
-					<a href="/" data-view="#view-main" style="color: white">CBH Lib Manager</a>
+					<a href="/" data-view="#view-main" style="color: white;">CBH Lib Manager</a>
 				</span>
         <!-- end sidebar branding-->
         <div class="ml-auto">
