--- a/src/pages/books/list-books.f7.html
+++ b/src/pages/books/list-books.f7.html
@@ -53,6 +53,10 @@
                         <a href="/books/info/${book.code}/" class="btn btn-primary btn-sm" role="button">
                           <i class="mdi mdi-menu"></i>
                         </a>
+                        <a href="/books/trace/${book.code}/" class="btn btn-dark btn-sm"
+                           role="button">
+                          <i class="mdi mdi-history"></i>
+                        </a>
                         <button @click="${deleteBook}" type="button" class="btn btn-danger btn-sm"
                                 data-toggle="modal" data-target="#deleteProject"
                                 data-code="${book.code}">
