--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -50,6 +50,10 @@
                            role="button">
                           <i class="mdi mdi-menu"></i>
                         </a>
+                        <a href="/borrowers/trace/${borrower.student_code}/" class="btn btn-dark btn-sm"
+                           role="button">
+                          <i class="mdi mdi-history"></i>
+                        </a>
                         <button @click="${deleteBorrower}" type="button" class="btn btn-danger btn-sm"
                                 data-toggle="modal" data-target="#deleteProject"
                                 data-student-code="${borrower.student_code}">
