--- a/src/pages/account/account.f7.html
+++ b/src/pages/account/account.f7.html
@@ -47,7 +47,7 @@
 
                 <div class="list-group-item p-all-15 h6 ">
                   <i class="mdi mdi-briefcase"></i>
-                  Tham gia vào ngày ${Clm.timeConverter(account.creation_time)}
+                  Tham gia ngày ${Clm.timeConverter(account.created_time)}
                 </div>
                 <div class="list-group-item p-all-15 h6 ">
                   <i class="mdi mdi-facebook"></i>
