--- a/src/pages/books/available-books.f7.html
+++ b/src/pages/books/available-books.f7.html
@@ -99,7 +99,7 @@
 		const deleteBook = (e) => {
 			let bookCode = e.currentTarget.dataset.code;
 
-			Clm.openConfirmModal('deleteBook').then(async isConfirmed => {
+			Clm.openConfirmModal('delete').then(async isConfirmed => {
 				if (!isConfirmed) return;
 
 				try {
