--- a/src/pages/login.f7.html
+++ b/src/pages/login.f7.html
@@ -6,7 +6,7 @@
           <div class="mx-auto col-md-8">
             <div class="p-b-20 text-center">
               <p>
-                <img src="/assets/img/logo.svg" width="80" alt=""/>
+                <img src="/static/logo-circle.png" width="80" alt=""/>
               </p>
               <p class="admin-brand-content">
                 CBH Lib Manager
