--- a/src/pages/manage/accounts.f7.html
+++ b/src/pages/manage/accounts.f7.html
@@ -40,7 +40,7 @@
                       <td>${account.name}</td>
                       <td>${account.role}</td>
                       <td>
-                        <a href="/manage/accounts/add/" class="btn btn-info projects" role="button">
+                        <a href="/manage/accounts/edit/${account._id}/" class="btn btn-info projects" role="button">
                           <i class="mdi mdi-pencil-outline"></i>
                         </a>
 
