--- a/src/pages/books/book-trace.f7.html
+++ b/src/pages/books/book-trace.f7.html
@@ -42,7 +42,7 @@
                       <td>${Clm.timeConverter(trace.expired_time)}</td>
                       <td>${(trace.is_borrowing) ? "Mượn sách" : (trace.is_return) ? "Trả sách" : "Gia hạn"}</td>
                       <td>${trace.extended_times}</td>
-                      <td>${trace.responsible_person.name}</td>
+                      <td>${trace.responsible_person ? trace.responsible_person.name : ""}</td>
                       <td>${Clm.timeConverter(trace.created_time)}</td>
                       <td>
                         <a href="/borrowers/info/${trace.borrower.student_code}/"
