--- a/src/pages/borrowers/borrower-trace.f7.html
+++ b/src/pages/borrowers/borrower-trace.f7.html
@@ -41,7 +41,7 @@
                       <td>${Clm.timeConverter(trace.expired_time)}</td>
                       <td>${(trace.is_borrowing) ? "Mượn sách" : (trace.is_return) ? "Trả sách" : "Gia hạn"}</td>
                       <td>${trace.extended_times}</td>
-                      <td>${trace.responsible_person.name}</td>
+                      <td>${trace.responsible_person ? trace.responsible_person.name : ""}</td>
                       <td>${Clm.timeConverter(trace.created_time)}</td>
                     </tr>
                     `)}
