--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="my-auto text-md-right col-md-5">
                       <a href="#" class="btn btn-rounded-circle btn-lg btn-primary">
-                        <i class="mdi mdi-laptop"></i>
+                        <i class="mdi mdi-human-greeting"></i>
                       </a>
                     </div>
                   </div>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="my-auto text-md-right col-md-5">
                       <a href="#" class="btn btn-rounded-circle btn-lg btn-danger">
-                        <i class="mdi mdi-alert-decagram"></i>
+                        <i class="mdi mdi-book-multiple-plus"></i>
                       </a>
                     </div>
                   </div>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="my-auto text-md-right col-md-5">
                       <a href="#" class="btn btn-rounded-circle btn-lg btn-success">
-                        <i class="mdi mdi-credit-card"></i>
+                        <i class="mdi mdi-library-shelves"></i>
                       </a>
                     </div>
                   </div>
