--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -116,7 +116,7 @@
               <div class="card m-b-30">
 
                 <div class="card-header">
-                  <div class="card-title">Top người mượn sách</div>
+                  <div class="card-title">Top mượn sách</div>
                 </div>
 
                 <div class="list-group list-group-flush">
